update grid section

--- a/index.html
+++ b/index.html
@@ -77,7 +77,9 @@
         <!--  -->
 
         <!--  -->
-        <div class="down-grid-section"></div>
+        <div class="down-grid-section">
+            
+        </div>
         <!--  -->
       </div>
   </section>
