update grid section card.

--- a/index.html
+++ b/index.html
@@ -78,7 +78,30 @@
 
         <!--  -->
         <div class="down-grid-section">
-            
+            <div class="down-grid-section-flexbox">
+                <div class="card-box">
+                          <div class="icon-view"><span class="material-icons">icecream</span></div>
+                          <h3>Food Meets Style</h3>
+                          <p>The phrasal sequence of the is now so that many campaign and benefit</p>
+                          <div class="btn-view"><p>read more </p><span class="material-icons">arrow_right_alt</span></div>
+                </div>
+                
+                  <div class="card-box">
+                          <div class="icon-view"><span class="material-icons">local_dining</span></div>
+                          <h3>Quality Check</h3>
+                          <p>The phrasal sequence of the is now so that many campaign and benefit</p>
+                          <div class="btn-view"><p>read more </p><span class="material-icons">arrow_right_alt</span></div>
+                </div>
+
+                  <div class="card-box">
+                          <div class="icon-view"><span class="material-icons">menu_book</span></div>
+                          <h3>Home Delivery</h3>
+                          <p>The phrasal sequence of the is now so that many campaign and benefit</p>
+                          <div class="btn-view"><p>read more </p><span class="material-icons">arrow_right_alt</span></div>
+                </div>
+
+
+            </div>
         </div>
         <!--  -->
       </div>
