menu section update finish

--- a/index.html
+++ b/index.html
@@ -108,7 +108,14 @@
   </section>
 
 <section class="menu-background">
-
+  <div class="container">
+    <div class="menu-content">
+        <div class="menu-text"> 
+            <h3>Our Menu</h3>
+            <h1>Choose your mixture & order now!</h1>
+        </div>
+    </div>
+  </div>
 </section>
 
 </body>
