new scss file updated.

--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
       </div>
   </section>
 
+  
 <section class="menu-background">
   <div class="container">
     <div class="menu-content">
@@ -117,6 +118,8 @@
     </div>
   </div>
 </section>
+
+<section></section>
 
 </body>
 </html>
