new file updated

--- a/index.html
+++ b/index.html
@@ -287,9 +287,6 @@
               <h4>$25.00</h4>
             </div>
            
-
-              
-
           </div>
         </div>
 
@@ -297,7 +294,9 @@
     </section>
 
 
+<section class="form-section">
 
+</section>
 
 
   </body>
