cliet top updated

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     />
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="./css/style.scss" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.css">
   </head>
   <body>
     <section class="top-section">
@@ -327,7 +328,7 @@
       </div>
     </section>
     <!--  -->
-
+    <!--  -->
     <section class="form-section">
       <div class="container">
         <div class="form-section-menu">
@@ -350,7 +351,7 @@
               </div>
             </div>
 
-             <div class="input-flexbox">
+            <div class="input-flexbox">
               <div id="input">
                 <span>phone no.</span>
                 <input id="pin" type="number" placeholder="PHONE NO :" />
@@ -373,14 +374,36 @@
                 <input type="text" placeholder="(ex: 8:00 p.m)" />
               </div>
             </div>
-            
-            <div class="btn-app">
-              book a table
-            </div>
 
+            <div class="btn-app">book a table</div>
           </div>
         </div>
       </div>
     </section>
+    <!--  -->
+
+<section class="client-background">
+<div class="container">
+  <div class="client-top">
+    <div class="client-top-content">
+      <h1>happy clients</h1>
+      <p>Splash your dream color Bring your home to lively Colors. We make it a priority to <br> offer flexible services to accomodate your needs</p>
+
+
+    </div>
+  </div>
+
+  
+  <div class="client-middle"></div>
+  <div class="client-down"></div>
+</div>
+</section>
+
+<script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
+<script type="text/javascript">
+
+  
+</script>
   </body>
 </html>
